--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bienvenidos a mi Página Web</title>
+    <title>Junior Cornejo</title>
     <style>
         body {
             margin: 0;
@@ -96,9 +96,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="glow">Bienvenidos a mi Página Web</h1>
-        <p>Explora y disfruta del contenido que tengo para ofrecerte.</p>
+        <h1 class="glow">Junior Cornejo</h1>
+        <p>Explora y disfruta del contenido que Junior tiene para ofrecerte.</p>
         <button class="button">¡Vamos a empezar!</button>
     </div>
 </body>
 </html>
+
